Fixed markdown tables.

--- a/notebook/03_maths_operators.ipynb
+++ b/notebook/03_maths_operators.ipynb
@@ -69,7 +69,7 @@
     "| ---        | ---                  |\n",
     "| !x         | negation             |\n",
     "| x && y     | short-circuiting and |\n",
-    "| x || y     | short-circuiting or  |\n",
+    "| x \\|\\| y     | short-circuiting or  |\n",
     "\n",
     "Nothing unexpected here.\n",
     "\n",
@@ -92,7 +92,7 @@
     "| ---        | ---                           |\n",
     "| ~x         | bitwise not                   |\n",
     "| x & y      | bitwise and                   |\n",
-    "| x | y      | bitwise or                    |\n",
+    "| x \\| y      | bitwise or                    |\n",
     "| x ⊻ y      | bitwise xor (exclusive or)    |\n",
     "| x ⊼ y      | bitwise nand (not and)        |\n",
     "| x ⊽ y      | bitwise nor (not or)          |\n",
