Fixed markdown tables.

--- a/notebook/03_maths_operators.ipynb
+++ b/notebook/03_maths_operators.ipynb
@@ -22,7 +22,7 @@
     "| x * y      | times          | performs multiplication                |\n",
     "| x / y      | divide         | performs division                      |\n",
     "| x ÷ y      | integer divide | x / y, truncated to an integer         |\n",
-    "| x \\ y      | inverse divide | equivalent to y / x                    |\n",
+    "| x \\\\ y      | inverse divide | equivalent to y / x                    |\n",
     "| x ^ y      | power          | raises x to the yth power              |\n",
     "| x % y      | remainder      | equivalent to rem(x, y)                |\n",
     "\n",
