Learnt about number and vector operators.

--- a/notebook/03_maths_operators.ipynb
+++ b/notebook/03_maths_operators.ipynb
@@ -151,7 +151,191 @@
     "\n",
     "I'm not sure how often I'd use the less common logic operators (maybe xor), but it's good to have the proper logic symbols available.\n",
     "\n",
-    "You can also do all the boolean operators with the equals equivalent, e.g. `<<` and `=<<`.\n",
+    "You can also do all the operators with the equals equivalent, e.g. `<<` and `=<<`.\n",
+    "\n",
+    "Updating operators inherit Julia's unfortunately type meddling. \n",
+    "\n",
+    "I create program #0 to do a simple cylinder formula.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<style> p { max-width: 500px; } </style>\n",
+    "\n",
+    "## [Vectorized \"dot\" operators](https://docs.julialang.org/en/v1/manual/mathematical-operations/#man-dot-operators)\n",
+    "\n",
+    "There's also a dot operator `.^` to get a dot product on a vector.\n",
+    "\n",
+    "So many mathematical operators in the syntax...\n",
+    "\n",
+    "Let's try it...\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5, 10, 15]\n",
+      "[1.0, 2.0, 3.0]\n",
+      "[5.0, 6.0, 7.0]\n",
+      "[0, 1, 0]\n",
+      "[3, 1, 2]\n",
+      "[[5, 10, 15], [20, 25, 30], [35, 40, 45]]\n",
+      "[3, 6, 9]\n",
+      "[5, 10, 15]\n",
+      "[5, 10, 15]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Scale the matrix.\n",
+    "println([1, 2, 3] .* 5)\n",
+    "\n",
+    "# Now divide.\n",
+    "println([2, 4, 6] ./ 2)\n",
+    "\n",
+    "# Couldn't get √ working... so I did n^0.5 instead.\n",
+    "println([25, 36, 49] .^ 0.5)\n",
+    "\n",
+    "# xor?\n",
+    "println([1, 0, 1] .⊻ 1)\n",
+    "\n",
+    "# bitshift\n",
+    "println([12, 5, 8] .>>> 2)\n",
+    "\n",
+    "# 2d matrix\n",
+    "println([\n",
+    "    [1, 2, 3],\n",
+    "    [4, 5, 6],\n",
+    "    [7, 8, 9]\n",
+    "] .* 5)\n",
+    "\n",
+    "# Add two matricies together.\n",
+    "a = [1, 2, 3]\n",
+    "b = [2, 4, 6]\n",
+    "println(a .+ b)\n",
+    "\n",
+    "# Updating operators can be combined with dots!\n",
+    "a .+= 2b\n",
+    "println(a)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<style> p { max-width: 500px; } </style>\n",
+    "\n",
+    "## [Numerical Comparisons](https://docs.julialang.org/en/v1/manual/mathematical-operations/#Numeric-Comparisons)\n",
+    "\n",
+    "Here's the equality table. \n",
+    "\n",
+    "Once again it's rich in unicode, but you can use the conventional operators if you prefer.\n",
+    "\n",
+    "| Operator | Name                     |\n",
+    "| ---      | ---                      |\n",
+    "| ==       | equality                 |\n",
+    "| !=, ≠    | inequality               |\n",
+    "| <        | less than                |\n",
+    "| <=, ≤    | less than or equal to    |\n",
+    "| >        | greater than             |\n",
+    "| >=, ≥    | greater than or equal to |\n",
+    "\n",
+    "Nothing really surprising here.\n",
+    "It's got the usual equals, not equals, lesser, greater, etc.\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "true\n",
+      "true\n",
+      "true\n",
+      "true\n",
+      "true\n",
+      "true\n",
+      "true\n",
+      "true\n",
+      "true\n",
+      "true\n",
+      "true\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "3-element Vector{Vector{Int64}}:\n",
+       " [1, 4, 6]\n",
+       " [9, 8, 2]\n",
+       " [8, 0, 5]"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "println(NaN ≠ NaN)\n",
+    "\n",
+    "println(Inf > 1e10)\n",
+    "\n",
+    "# It's maxed out man!\n",
+    "println(Inf == Inf + 1)\n",
+    "\n",
+    "# Can't make it smaller.\n",
+    "println(Inf == Inf - 1)\n",
+    "\n",
+    "# Flaat and int can be directly compared.\n",
+    "println(3 == 3.0)\n",
+    "\n",
+    "# NaN is infectious, a single one prevents a match.\n",
+    "a = [1, 2, NaN, 4]\n",
+    "println(a ≠ a)\n",
+    "\n",
+    "# isnan can beused to defect it.\n",
+    "isnan(NaN)\n",
+    "\n",
+    "println(isfinite(10) == true)\n",
+    "\n",
+    "println(isinf(-Inf))\n",
+    "\n",
+    "println(isfinite(NaN) == false)\n",
+    "\n",
+    "# Surprisingly, isequal() does consider NaN == NaN\n",
+    "println(isequal(a, a) == true)\n",
+    "\n",
+    "# Operators can be chained!\n",
+    "# Expressions look so much nicer this way.\n",
+    "x = 5\n",
+    "println(4 < x <= 6)\n",
+    "\n",
+    "b = [\n",
+    "    [1, 4, 6],\n",
+    "    [9, 8, 2],\n",
+    "    [8, 0, 5]\n",
+    "]\n",
+    "\n",
+    "\n",
     "\n"
    ]
   }
